sumo/tests/sumo/output/e2/errors/length_missing/errors.sumo
Warning: Missing arguments 'length'/'endPos' for E2Detector '4/1to3/1'. Assuming detector end == lane end of lane '4/1to3/1_0'.
